Changes from 2.0.0 to 2.0.2
---------------------------
** Improvement
    * [FELIX-5001] scr:list Gogo command should display component configurations
    * [FELIX-5020] Don't log exception if metatype is not available


Changes from 1.8.2 to 2.0.0
---------------------------
** Improvement
    * [FELIX-4949] [RFC-190] Implement prototype_required
    * [FELIX-4918] Implement searching for event methods according to 112.3.2
    * [FELIX-4916] Provide service capability
    * [FELIX-4787] Update DS Implementation to R6
    * [FELIX-4769  [RFC190/212] Implement ComponentServiceObjects
    * [FELIX-4634] [RFC212] Implement replace strategy
    * [FELIX-4633] [RFC212] Implement update strategy
    * [FELIX-4632] [RFC212] Make properties map passed to event methods comparable
    * [FELIX-4631] [R6/RFC212] Implement field injection
    * [FELIX-4537] use a bnd.bnd file for bnd configuration
    * [FELIX-4507] "persistent" factory components
    * [FELIX-4506] Control felix optional extensions through xml attributes in component descriptor
    * [FELIX-4467] Option to use system bundle context for tracking bundles
    * [FELIX-4412] Add Provide-Capability for declarative services bundle
    * [FELIX-4406] [R6/rfc190] support 1.3 namespace
    * [FELIX-4405] [R6rfc190] support prototype scope
    * [FELIX-4404] [R6/rfc190] implement additional event method signature single Map
    * [FELIX-4403] [R6/rfc190] implement configuration through annotation instances
    * [FELIX-4402] [R6/rfc190] implement multiple pid support
    * [FELIX-4401] [R6/rfc190] Implement runtime/introspection/console based on DTOs
    * [FELIX-4391] R6/rfc190 Support <refname>.cardinality.minimum configuration property

** Bug
    * [FELIX-4990] Only first factoy configuration is used
    * [FELIX-4968] With configuration annotations, coercion exceptions are thrown at the wrong time.
    * [FELIX-4967] Configuration annotations need to handle char and char[]