@@ -4,6 +4,9 @@ Changes from 2.0.0 to 2.0.2
     * [FELIX-5001] scr:list Gogo command should display component configurations
     * [FELIX-5020] Don't log exception if metatype is not available
 
+** Bug
+    * [FELIX-5028] ServiceFactory for components might return null
+
 
 Changes from 1.8.2 to 2.0.0
 ---------------------------
